# moq

./: CLAUDE.md  Cargo.toml
doc/concepts/: authentication.md
js/hang/src/publish/video/: polyfill.ts
js/lite/: README.md  package.json
js/lite/examples/: connection.ts  discovery.ts  publish.ts  subscribe.ts  tsconfig.json
js/scripts/: package.ts
js/token/: README.md  package.json
js/token/examples/: sign-and-verify.ts  tsconfig.json
js/token/src/: algorithm.test.ts  cli.ts  generate.ts  index.ts  key.test.ts  key.ts
rs/hang/examples/: video.rs
rs/hang/src/import/: avc3.rs  hev1.rs
rs/hang/src/model/: track.rs
rs/libmoq/src/: api.rs
rs/moq-lite/: Cargo.toml
rs/moq-lite/src/: session.rs
rs/moq-native/: Cargo.toml
rs/moq-native/examples/: chat.rs  pp_client.rs
rs/moq-native/src/: client.rs  iroh.rs  log.rs  server.rs
rs/moq-privacypass/: Cargo.toml
rs/moq-privacypass/examples/: e2e_flow.rs  get_token.rs
rs/moq-privacypass/src/: challenge.rs  client.rs  error.rs  lib.rs  nonce.rs  scope.rs  token.rs  verifier.rs
rs/moq-relay/: Cargo.toml  README.md
rs/moq-relay/src/: auth.rs  config.rs  connection.rs  main.rs  privacypass.rs  web.rs
rs/moq-token/src/: key.rs
