[package]
name = "moq-lite"
description = "Media over QUIC - Transport (Lite)"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.11.0"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[features]
serde = ["dep:serde"]

[dependencies]
async-channel = "2"
base64 = "0.22"
bytes = "1"
futures = "0.3"
hex = "0.4"
num_enum = "0.7"
rand = "0.9.2"
serde = { workspace = true, optional = true, features = ["rc"] }
thiserror = "2"
tokio = { workspace = true, features = [
	"macros",
	"io-util",
	"sync",
	"test-util",
] }
tracing = "0.1"
web-async = { workspace = true }
web-transport-trait = { workspace = true }
