[package]
name = "moq-native"
description = "Media over QUIC - Helper library for native applications"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.11.0"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["rustls/aws-lc-rs", "rcgen/aws_lc_rs", "quinn/rustls-aws-lc-rs"]
iroh = ["dep:web-transport-iroh"]
ring = ["rustls/ring", "rcgen/ring", "quinn/rustls-ring"]
tokio-console = ["dep:console-subscriber"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive", "env"] }
console-subscriber = { version = "0.5", optional = true }
futures = "0.3"
hex = "0.4"
humantime = "2.3"
humantime-serde = "1.1"

moq-lite = { workspace = true }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
quinn = { version = "0.11", default-features = false, features = [
	"platform-verifier",
	"runtime-tokio",
	"bloom",
] }
rand = "0.9.2"
rcgen = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-webpki = { version = "0.103", features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["hex"] }
time = "0.3"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
web-transport-iroh = { workspace = true, optional = true }
web-transport-quinn = { workspace = true }
web-transport-ws = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
anyhow = "1"
bytes = "1"
moq-privacypass = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
url = "2"
